--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,21 @@
 
 <h1>Please fill in your profile details</h1>
 
-<div ng-controller="ProfileCtrl">
+
+<%= form_for @user, html: {multipart: true} do |f| %>
+
+	<%= f.label :avatar %>
+	<%= f.file_field :avatar %>
+	<%= f.submit %>
+
+<% end %>
+
+<% if current_user.avatar.present? %>
+	<%= image_tag current_user.avatar.url(:thumb), class: 'profile-pic' %>
+<% end %>
+
+
+<div ng-controller="ProfileCtrl" class='profile-info'>
   <a href="#" name="profile[name]" editable-text="user.name" onaftersave="updateProfile('name', $data)">{{ user.name || "empty" }}</a>
   <br>
   <a href="#" name="profile[profession]" editable-text="user.profession" onaftersave="updateProfile('profession', $data)">{{ user.profession || "empty" }}</a>
