--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
+
+<div ng-controller="ProfileCtrl" class='profile-info'>
+
 <div>
 
 <% if current_user.sign_in_count == 1 %>
@@ -6,20 +9,26 @@
 
 
 
-<%= form_for @user, html: {multipart: true} do |f| %>
 
-	<%= f.label :avatar %>
-	<%= f.file_field :avatar %>
-	<%= f.submit %>
+	<%= form_for @user, html: {multipart: true} do |f| %>
 
-<% end %>
+		<%= f.label :avatar %>
+		<%= f.file_field :avatar %>
+		<%= f.submit %>
 
-<% if current_user.avatar.present? %>
-	<%= image_tag current_user.avatar.url(:thumb), class: 'profile-pic' %>
-<% end %>
+	<% end %>
+
+	<div ng-file-drop="onFileSelect($files)" ng-file-drag-over-class="optional-css-class-name-or-function">drop picture here</div>
 
 
-<div ng-controller="ProfileCtrl" class='profile-info'>
+	<% if current_user.avatar.present? %>
+ 		<img ng-src="{{user.userImage}}" style="height: 100px; width: auto">
+	<% end %>
+
+
+
+ 
+
 
 	<button ng-click="editable = !editable">Toggle Edit</button>
 
@@ -40,6 +49,7 @@
 
 
 </div>
+
 
 
 </div>
