--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,27 +19,18 @@
 <% end %>
 
 
-<div ng-controller="ProfileCtrl" class='profile-info'>
+<%= render "information" %>
 
-	<button ng-click="editable = !editable">Toggle Edit</button>
+<button>Work</button>
 
-  <a class="name" ng-show="editable" href="#" name="profile[name]" editable-text="user.name" onaftersave="updateProfile('name', $data)"><h1 class="name">{{user.name || "Name" }}</h1></a>
-	<h1 class="name" ng-hide="editable">{{user.name || "Name" }}</h1>  
+<%= link_to 'Upload Art' %>
 
+<%= form_for @user.works.new, html: {multipart: true} do |f| %>
 
-  <a class="profession" ng-show="editable" href="#" name="profile[profession]" editable-text="user.profession" onaftersave="updateProfile('profession', $data)"><p class="profession">{{user.profession || "Profession" }}</p></a>
-  <p class="profession" ng-hide="editable">{{user.profession || "Profession" }}</p>
+	<%= f.label 'Upload' %>
+	<%= f.file_field :image %>
 
-
-  <a class="network" ng-show="editable" href="#" name="profile[network]" editable-text="user.network" onaftersave="updateProfile('network', $data)"><p class="network">{{user.network || "Network" }}</p></a>
-  <p ng-hide="editable" class="network">{{user.network || "Network" }}</p>
-
-
-  <a class="short-bio" ng-show="editable" href="#" name="profile[bio]" editable-text="user.shortBio" onaftersave="updateProfile('short_bio', $data)"><p class="short-bio">{{user.shortBio || "Short Bio" }}</p></a>
-  <p ng-hide="editable" class="short-bio">{{user.shortBio || "Short Bio" }}</p>
-
-
-</div>
+<% end %>
 
 
 </div>
