Specified many to many relationships. Fixed placeholders on form

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,11 +33,11 @@
 	<%= f.label :title %>
 	<%= f.text_field :title %>
 
-	<%= f.label :medium %>
-	<%= f.text_field :medium %>
+	<%= f.label :media %>
+	<%= f.text_field :media, value: '' %>
 
-	<%= f.label :genre %>
-	<%= f.text_field :genre %>
+	<%= f.label :genres %>
+	<%= f.text_field :genres, value: '' %>
 
 	<%= f.label :caption %>
 	<%= f.text_field :caption %>
