added helper methods for genres, media in work model with rspec tests

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,11 +33,11 @@
 	<%= f.label :title %>
 	<%= f.text_field :title %>
 
-	<%= f.label :media %>
-	<%= f.text_field :media, value: '' %>
+	<%= f.label :medium_names, 'Media' %>
+	<%= f.text_field :medium_names, value: '' %>
 
-	<%= f.label :genres %>
-	<%= f.text_field :genres, value: '' %>
+	<%= f.label :genre_names, 'Genres' %>
+	<%= f.text_field :genre_names, value: '' %>
 
 	<%= f.label :caption %>
 	<%= f.text_field :caption %>
