added uploading text/art as radio buttons, added corresponding cucumber tests and implementations

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,7 +23,8 @@
 
 <button>Work</button>
 
-<%= link_to 'Upload Art' %>
+<%= button_tag 'Upload Art' %>
+<%= button_tag 'Upload Text' %>
 
 <%= form_for [@user, @work], html: {multipart: true} do |f| %>
 
