--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,11 @@
 <html ng-app="app">
 <head>
   <title>Folioapp</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <link href="https://netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+  <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.20/angular.min.js" %>
+  <%= javascript_include_tag src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.11.0.js" %>
+
   <%= javascript_include_tag 'application'%>
   <%= csrf_meta_tags %>
 </head>
