--- a/app/views/works/_art.html.erb
+++ b/app/views/works/_art.html.erb
@@ -1,3 +1,36 @@
-<%= form_for @new_work do |f| %>
+<div ng-controller="UploadController">
+
+<%= form_for @new_work, url: user_collection_works_path do |f| %>
+
+	<%= f.label :image %>
+	<%= f.file_field :image %>
+
+
+	<a href="#" class="add-details" ng-init="details = false" ng-click="details = !details">Add Details</a>
+
+
+
+	<div ng-show="details">
+
+
+	<%= f.label :title %>
+	<%= f.text_field :title %>
+
+	<%= f.label :medium_names, 'Media' %>
+	<%= f.text_field :medium_names, value: '' %>
+
+	<%= f.label :genre_names, 'Genres' %>
+	<%= f.text_field :genre_names, value: '' %>
+
+	<%= f.label :caption %>
+	<%= f.text_field :caption %>
+
+	<%= f.submit 'Publish' %>
+
+
+	</div>
+
 
 <% end %>
+
+</div>
