--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,9 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *= require xeditable
+ *= require medium-editor
+ *= require medium-flat.min
  *= require_tree .
  *= require_self
  */
