--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -11,18 +11,12 @@
 	<li ng-repeat="genre in work.genres">{{medium}}</li>
 	{{work.caption}}
 
-	<div ng-show="work.format == 'text'">{{work.text}}</div>
+	<div ng-show="work.format == 'text'">
+		<p ng-bind-html="work.text"></p>
+		<!-- {{work.text}} -->
+	</div>
 
 </div>
-
-
-
-
-
-
-
-
-
 
 
 	<button ng-click="upload = true">Add To <%= @collection.title %></button>
