Editable profile functionality covers both true first time users and people already editing their profile

--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -12,8 +12,7 @@
 	{{work.caption}}
 
 	<div ng-show="work.format == 'text'">
-		<p ng-bind-html="work.text"></p>
-		<!-- {{work.text}} -->
+		<div ng-bind-html="work.text"></div>
 	</div>
 
 </div>
