--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
 
 
 
-	
+	<div ng-show="editable">
 	<%= form_for @user, html: {multipart: true} do |f| %>
 
 		<%= f.label :avatar %>
@@ -17,8 +17,9 @@
 		<%= f.submit %>
 
 	<% end %>
+	</div>
 
-	<div ng-file-drop="onFileSelect($files)" ng-file-drag-over-class="optional-css-class-name-or-function">drop picture here</div>
+	<div ng-show="editable" ng-file-drop="onFileSelect($files)" ng-file-drag-over-class="optional-css-class-name-or-function">drop picture here</div>
 
 	<% if current_user.avatar.present? %>
  		<img class="profile-pic" ng-src="{{user.userImage}}" style="height: 100px; width: auto">
