Refactoring profile information into ng-repeat

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -34,11 +34,9 @@
 <%= link_to 'Work', user_collections_path(@user) %>
 
 
-
-
 </div>
+<button ng-click="changeUrl()">Hello World</button>
 
-
-
+<div ng-include="url"></div>
 
 </div>
