--- a/app/views/users/_information.html.erb
+++ b/app/views/users/_information.html.erb
@@ -2,24 +2,24 @@
 
 	<button ng-click="editable = !editable">Toggle Edit</button>
 
-	<div ng-repeat="attribute in attributes">
+	<div class="name-show-edit edit-field">
+	  <a class="name" ng-show="editable" href="#" name="profile[name]" editable-text="user.name" onaftersave="updateProfile('name', $data)"><h1 class="name">{{user.name || "Name" }}</h1></a>
+		<h1 class="name" ng-hide="editable">{{user.name || "Name" }}</h1>  
+	</div>
 
-		<div class="{{attribute + '-show-edit'}} edit-field">
+	<div class="profession-show-edit edit-field">
+	  <a class="profession" ng-show="editable" href="#" name="profile[profession]" editable-text="user.profession" onaftersave="updateProfile('profession', $data)"><p class="profession">{{user.profession || "Profession" }}</p></a>
+	  <p class="profession" ng-hide="editable">{{user.profession || "Profession" }}</p>
+	</div>
 
-			<a href="#" 
-			class="{{attribute}}"
-			ng-show="editable"
-			editable-text="user[attribute]"
-			onaftersave="updateProfile(attribute, $data)">
-			<p class="{{attribute}}">
-				{{user[attribute] || attribute}}
-			</p>
-			</a>
-			<p class="{{attribute}}" ng-hide="editable">
-				{{user[attribute] || attribute}}
-			</p>
-		</div>
+	<div class="network-show-edit edit-field">
+	  <a class="network" ng-show="editable" href="#" name="profile[network]" editable-text="user.network" onaftersave="updateProfile('network', $data)"><p class="network">{{user.network || "Network" }}</p></a>
+	  <p ng-hide="editable" class="network">{{user.network || "Network" }}</p>
+  </div>
 
-</div>	
+  <div class="bio-show-edit edit-field">
+	  <a class="short-bio" ng-show="editable" href="#" name="profile[bio]" editable-text="user.shortBio" onaftersave="updateProfile('short_bio', $data)"><p class="short-bio">{{user.shortBio || "Short Bio" }}</p></a>
+	  <p ng-hide="editable" class="short-bio">{{user.shortBio || "Short Bio" }}</p>
+	</div>	
 
 </div>
