--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,8 @@
 
 	<%= javascript_include_tag src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.20/angular.min.js" %>
   <%= javascript_include_tag src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.11.0.js" %>
+  <%= javascript_include_tag src="https://cdn.firebase.com/js/client/1.0.18/firebase.js" %>
+  <%= javascript_include_tag src="https://cdn.firebase.com/libs/angularfire/0.7.1/angularfire.min.js" %>
   <%= javascript_include_tag 'application'%>
 
 </body>
