--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -65,16 +65,73 @@
 
 	<% end %>
 
-	
-	 <div id="container" style="max-width: 70%;">
-	    <h1>Medium Editor is Awesome!</h1>
-	    <form name="demo">
-	        <div ng-model="text" medium-editor></div>
-	    </form>
-	</div>
-	<p style="text-align: center;"><small><a style="color: #333;" target="_blank" href="http://www.goodreads.com/reader/475-great-expectations">Source</a></small></p>
 
-	{{text}}
+
+	<br />
+
+	<button ng-click="addText()"><b>Add Text</b></button>
+
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+
+				<div class="col-md-3 box-container" style="background: #eee; border: 1px solid" ng-repeat="writing in writings">
+
+				
+					<button class="pull-right" ng-click="removeText(writing.id)">X</button><br />
+					<p><input placeholder="Add a title..." ng-model="writing.title" value="{{writing.title}}" ng-change="saveText(writing.id)" /></p>
+					<p><img class="profile-pic" ng-src="http://placekitten.com/100/100" style="height: 100px; width: auto" ng-click="openEditor('lg',writing.id)"></p>
+					<p><input placeholder="Add a short caption..." ng-model="writing.caption" value="{{writing.caption}}" ng-change="saveText(writing.id)" /></p>
+					<p><input placeholder="Add some genres..." ng-model="writing.genres" value="{{writing.genres}}" ng-change="saveText(writing.id)" /></p>
+
+					<div ng-model="writing.body" style="width: 100%; height: 200px;" ng-change="saveText(writing.id)" medium-editor></div>
+
+					
+
+				</div>	
+
+			</div>		
+		</div>
+	</div>
+
+
+	<br />
+
+	<br />
+	
+
+
+	<button ng-click="addImage()"><b>Add Image</b></button>
+
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+
+				<div class="col-md-3 box-container" style="background: #eee; border: 1px solid" ng-repeat="image in images">
+					<button class="pull-right" ng-click="removeImage(image.id)">X</button><br />
+					<p><input placeholder="Add a title..." ng-model="image.title" value="{{image.title}}" ng-change="saveImage(image.id)" /></p>
+					<p><img class="profile-pic" ng-src="http://placekitten.com/500/500" style="height: 100px; width: auto" ng-click="openCollection('lg',image.id)"></p>
+					<p><input placeholder="Add a short caption..." ng-model="image.caption" value="{{image.caption}}" ng-change="saveImage(writing.id)" /></p>
+					<p><input placeholder="Medium..." ng-model="image.medium" value="{{image.medium}}" ng-change="saveImage(image.id)" /></p>
+					<p><input placeholder="Add some genres..." ng-model="image.genres" value="{{image.genres}}" ng-change="saveImage(image.id)" /></p>
+					
+
+				</div>	
+
+			</div>		
+		</div>
+	</div>
+
+
+
+	</div>
+
+
+
 
 
 
@@ -82,7 +139,27 @@
 
 	</div>
 
+<img src="" alt="">
+	<script type="text/ng-template" id="myTextModal.html">
+    <div class="modal-container">
+      <div class="modal-header">
+        <h3 class="modal-title">{{collections.title}}</h3>
+      </div>
+      <div class="modal-body">
+        <div style="width: 70%; height: 200px;" ng-model="collections.body" medium-editor></div>
+      </div>
+      <p>{{collections}}</p>
+    </div>  
+  </script> 
 
-
+  <script type="text/ng-template" id="myImageModal.html">
+    <div class="modal-container">
+      <div class="modal-header">
+        <h3 class="modal-title">Lots of kittens!!</h3>
+      </div>
+      <div class="modal-body">
+       <img src="http://placekitten.com/500/500" alt="">
+    </div>  
+  </script> 
 
 </div>
