Started introducing last week's design into the app. Problems: drag and drop avatar doesn't work until refresh; styles are messed up

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,78 @@
 
-<div ng-controller="ProfileCtrl" class='profile-info'>
+<div ng-controller="ProfileCtrl as profile">
 
-<div>
+<!------------------ PROFILE COVER ------------------------------------>
+	<button ng-click="editable = !editable", class="toggle-edit"></button>
+	<div class="body-wrapper">
 
 
-<%= render "profile_picture" %>
+			<div ng-show="editable">
+	<%= form_for @user, html: {multipart: true} do |f| %>
 
-<%= render "information" %>
+		<%= f.label :avatar %>
+		<%= f.file_field :avatar %>
+		<%= f.submit %>
 
-<%= link_to 'Work', user_collections_path(@user) %>
+	<% end %>
+	</div>
 
-</div>
 
-<button ng-click="changeUrl()">Hello World</button>
+		<div class="summary" id="summary-section">
 
-<div ng-include="url"></div>
+			<div class="profile-info summary-column">
+				<div class="info-wrapper">
+					<div class="pic-wrapper" ng-file-drop="onFileSelect($files)" ng-file-drag-over-class="optional-css-class-name-or-function">
+						<%= render "profile_picture" %>
+					</div>
 
-</div>
+					<%= render "information" %>
+					<!-- <p class="organisations">{{user.organisationPosition}} of <a href="#">{{user.organisation}}</a></p> -->
+					<span><button id="follow"></button>
+					<button id="message" ng-show="user.messageable"></button></span>
+				</div>
+			</div>
+
+			<div class="profile-options summary-column">
+
+				<div class="options-wrapper">
+					<div class="option" id="portfolio" ng-mouseenter="profile.selection = workPreview"><%= link_to 'Work', user_collections_path(@user) %></div>
+					<div class="option" id="social" ng-mouseenter="profile.selection = pickPreview"><p>Picks</p></div>
+					<div class="option" id="bio" ng-mouseenter="profile.selection = storyPreview"><p>Story</p></div>
+				</div>
+			</div>
+
+			<div class="profile-preview summary-column">
+
+				<div class="info-wrapper preview-wrapper">
+
+					<div class="work-preview">
+						<div class="work-preview-header">
+							<h3 id="selections" ng-show="profile.selection == workPreview">Selections of Laurie's Work</h3>
+							<h3 id="selections" ng-show="profile.selection == pickPreview">What Laurie Likes</h3>
+							<h3 id="selections" ng-show="profile.selection == storyPreview">Laurie's Stories</h3>
+						</div>
+
+						<div class="work-wrapper" ng-repeat="work in profile.selection">
+							<div class="work">
+								<div class="work-preview-info" ng-class="{ 'story': profile.selection == storyPreview }">
+									<div id="info">
+										<h1 class="preview-title">{{work.title}}</h1>
+										<p class="short-description">{{work.description}}</p>
+										<div class="additional-info">
+											<p class="recommendation-number" ng-class="{ 'story': profile.selection == storyPreview }">{{work.recommendations}}</p>
+											<p ng-class="{ 'cool-information' : work.commissionedOrFeatured, 'anthology' : work.anthology, 'single-author' : work.singleAuthor}">{{work.additionalInformation}}</p>
+										</div>
+								</div>
+							</div>
+
+							<div class="preview-pic pic-wrapper" ng-show="profile.selection != storyPreview">
+								<img id="profile-pic" ng-src="{{work.image}}">
+							</div>
+						</div>	
+						<div class="hr-wrapper"><hr id="after-work" ng-show="!$last"></div>
+
+					</div>
+				</div>
+			</div>
+		</div>	
+	</div>
