--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 <%= yield %>
 
 
-<%= link_to "Log Out", destroy_user_session_path, method: :delete %>
+<%= link_to "Log Out", destroy_user_session_path, method: :delete, class: 'log-out' %>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.20/angular.min.js"></script>
   <%= javascript_include_tag 'application'%>
