--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -29,28 +29,38 @@ h1 {
 	font-weight: 900;
 }
 
+div.profile-wrapper {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	align-items: center;
+	justify-content: center;
+}
+
 div.body-wrapper {
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	min-height: 100%;
+	/*height: 100%;*/
 	align-items: center;
 	justify-content: center;
-	margin-top: 10%
+	padding-top: 10%
 }
 
 button.toggle-edit {
-	width: 60x;
-	height: 60px;
+	align-self: flex-start;
+	width: 40px;
+	height: 40px;
 	border-radius: 0px;
 	background-color: rgba(0,0,0,0.8);
+	overflow: hidden;
 }
 
 button.toggle-edit::before {
 	padding-top: 0px;
 	font-family: 'Entypo';
 	content: '\270E';
-	font-size: 60px;
+	font-size: 40px;
 	vertical-align: top;
 	color: white;
 }
@@ -175,6 +185,7 @@ div.pic-wrapper {
 img#profile-pic {
 	height: 100%;
 	width: 100%;
+	overflow: hidden;
 }
 
 /*PROFILE SUMMARY TEXT*/
@@ -227,7 +238,7 @@ hr {
 	width: 50px;
 }
 
-button {
+div.info-wrapper button {
 	background: none;
 	border: 1px solid #b3b2b5;
 	border-radius: 50px;
@@ -242,7 +253,7 @@ button {
 	outline: none;
 }
 
-button:hover {
+div.info-wrapper button:hover {
 	color: #657383;
 	border: 1px solid #657383;
 }
@@ -438,14 +449,10 @@ hr#after-work {
 
 /*-------PORTFOLIO---------*/
 
-/*hr.page-divider {
-	margin-top: 0;
-	width: 20%;
-	margin-right: 4%;
-}*/
 
 div.portfolio {
-	min-height: 100%;
+	min-height: 100vh;
+	margin-top: 75vh;
 	/*height: 60px;*/
 	width: 100%;
 	/*background-color: salmon;*/
@@ -459,9 +466,7 @@ div.portfolio:focus {
 	outline: none;
 }
 
-/*div.portfolio::active {
-	outline: none;
-}*/
+
 
 div.work-container {
 	display: flex;
