Collections can now be added

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -12,11 +12,11 @@
 @import url('http://fonts.googleapis.com/css?family=Droid+Sans');
 @import url('http://fonts.googleapis.com/css?family=Cardo:400,400italic');
 
-@font-face {
+/*@font-face {
 	font-family: 'Entypo';
 	src: url('../fonts/entypo/entypo.ttf') format('truetype');
 }
-
+*/
 
 body {
 	margin: 0px;
