--- a/app/views/works/_writing.html.erb
+++ b/app/views/works/_writing.html.erb
@@ -6,7 +6,7 @@
 </div>
 
 
-<%= form_for @new_work, url: user_collection_works_path do |f| %>
+<%= form_for @new_work, html: {multipart: true}, url: user_collection_works_path do |f| %>
 
 	<div id="test" style="visibility: hidden; text-indent: -9999px;">
 
