User can click-edit his collections

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,7 +30,7 @@
 			<div class="profile-options summary-column">
 
 				<div class="options-wrapper">
-					<div class="option" id="portfolio" ng-mouseenter="profile.selection = workPreview"><p>Work<p></div>
+					<div class="option" id="portfolio" ng-mouseenter="profile.selection = workPreview"><a href="#"><<p>Work<p></a></div>
 					<div class="option" id="social" ng-mouseenter="profile.selection = pickPreview"><p>Picks</p></div>
 					<div class="option" id="bio" ng-mouseenter="profile.selection = storyPreview"><p>Story</p></div>
 				</div>
