--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -1,15 +1,45 @@
 <div ng-controller="CollectionIndexCtrl">
 	
-	<button ng-click="editable = !editable", class="toggle-edit"><p>Toggle Edit</p></button>
+	<button ng-init="editable = false" ng-click="editable = !editable", class="toggle-edit-collection"><p>Toggle Edit</p></button>
 
 	<br><br><br><br>
 
 	<div ng-repeat="collection in user.collections" class="{{collection.title}}">
 
-		<img ng-show="{{collection.image}}" ng-src="{{collection.image}}" class="{{collection-image}}">
+		<img ng-src="{{collection.image}}" class="collection-image">
 
-		{{collection.title}}
-		{{collection.description}}
+		<a class="collection-title"
+		ng-show="editable"
+		editable-text="collection.title"
+		onaftersave="updateCollection('title', $data, collection.id)"
+		href="#">
+		<h1 class="collection-title">
+			{{collection.title}}
+		</h1>
+		</a>
+
+		<h1 class="collection-title"
+		ng-hide="editable">
+			{{collection.title}}
+		</h1>		
+
+
+
+		<a href="#"
+		class="collection-description"
+		ng-show="editable"
+		editable-text="collection.description"
+		onaftersave="updateCollection('description', $data, collection.id)"
+		>
+		<p class="collection-description">
+			{{collection.description}}
+		</p>
+		</a>
+
+		<p ng-hide="editable" class="collection-description">
+			{{collection.description}}
+		</p>
+		
 
 		<button class="details" ng-click="upload = collection.title">
 			Add To {{collection.title}}
@@ -23,7 +53,7 @@
 
 	</div>
 
-	<a href="users/{{user.id}}/collections/new">Add A New Collection</a>
+	<a href="/users/{{user.id}}/collections/new">Add A New Collection</a>
 
 
 </div>
