Image preview now also works for writing-thumbnail and collection creation

--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -1,5 +1,7 @@
 <div ng-controller="CollectionIndexCtrl">
 	
+	{{test}}
+
 	<button ng-init="editable = false" ng-click="editable = !editable", class="toggle-edit-collection"><p>Toggle Edit</p></button>
 
 	<br><br><br><br>
