--- a/app/views/collections/new.html.erb
+++ b/app/views/collections/new.html.erb
@@ -1,3 +1,5 @@
+<div ng-controller="UploadCtrl">
+
 <%= form_for @collection, url: user_collections_path, html: {multipart: true} do |f| %>
 
 	<%= f.label :title %>
@@ -7,8 +9,12 @@
 	<%= f.text_area :description %>
 
 	<%= f.label :image %>
-	<%= f.file_field :image %>
+	<%= f.file_field :image, required: true, data: {:"ng-file-select" => "onFileSelect($files)"}  %>
+
+	<img ng-src="{{imageSrc}}" />
 
 	<%= f.submit 'Add Collection' %>
 
 <% end %>
+
+</div>
