--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -1,9 +1,9 @@
 <div ng-controller="CollectionIndexCtrl">
 	
-	{{test}}
 
+	<% if @user == current_user %>
 	<button ng-init="editable = false" ng-click="editable = !editable", class="toggle-edit-collection"><p>Toggle Edit</p></button>
-
+	<% end %>
 	<br><br><br><br>
 
 	<div ng-repeat="collection in user.collections" class="{{collection.title}}">
@@ -43,6 +43,7 @@
 		</p>
 		
 
+<% if @user == current_user %> 
 		<button class="details" ng-click="upload = collection.title">
 			Add To {{collection.title}}
 		</button>
@@ -52,11 +53,13 @@
 			<a href="/users/{{user.id}}/collections/{{collection.id}}/works/new?upload_type=art">Add Art</a>
 					<a href="/users/{{user.id}}/collections/{{collection.id}}/works/new?upload_type=writing">Add Writing</a>
 		</div>
+<% end %>
 
 	</div>
 
+<% if @user == current_user %>
 	<a href="/users/{{user.id}}/collections/new">Add A New Collection</a>
-
+<% end %>
 
 </div>
 
