--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -86,8 +86,11 @@ button.toggle-edit p {
 div.summary {
 	height: 100%;
 	width: 100%;
-	background-size: cover;
+	/*background-size: cover;*/
 	display: flex;
+	/*flex-direction: column;*/
+	/*align-items: center;*/
+	/*justify-content: center;*/
 }
 
 .profile-info {
