Organisation model created

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,7 @@
 	<% if @user == current_user %>
 	<button ng-click="editable = !editable", class="toggle-edit"><p>Toggle Edit</p></button>
 	<div class="body-wrapper section">
+		<p ng-show="editable">Please fill in your profile details</p>
 	<% end %>
 
 
@@ -22,7 +23,7 @@
 					</div>
 
 					<%= render "information" %>
-					<!-- <p class="organisations">{{user.organisationPosition}} of <a href="#">{{user.organisation}}</a></p> -->
+					<!-- <p class="organisations">Co-Founder of <a href="#">Notes</a></p> -->
 					<span><button id="follow"></button>
 					<button id="message" ng-show="user.messageable"></button></span>
 				</div>
