--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= csrf_meta_tags %>
   <!-- <base href="/" /> -->
 </head>
-<body>
+<body ng-controller="FfolioCtrl">
 
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
@@ -14,7 +14,15 @@
 <%= yield %>
 
 
+<% if user_signed_in? %>
+<input type="search" class="search" ng-model="search" placeholder="Search...">
+<div ng-repeat="user in users | filter:search" class="users">
+	<p>{{user}}</p> <br />
+</div>
 <%= link_to "Log Out", destroy_user_session_path, method: :delete, class: 'log-out' %>
+
+<% end %>
+
 
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.20/angular.min.js"></script>
   <%= javascript_include_tag 'application'%>
