First organisations feature spec all green: user can create an organisation and his membership is displayed on his profile

--- a/app/views/organisations/show.html.erb
+++ b/app/views/organisations/show.html.erb
@@ -1,8 +1,7 @@
-
-<div class="profile-wrapper" ng-controller="ProfileCtrl as profile">
+<div class="profile-wrapper" ng-controller="OrganisationShowCtrl">
 
 <!------------------ PROFILE COVER ------------------------------------>
-	<% if @user == current_user %>
+	<% if @organisation.users.include? current_user %>
 	<button ng-click="editable = !editable", class="toggle-edit"><p>Toggle Edit</p></button>
 	<div class="body-wrapper section">
 		<p ng-show="editable">Please fill in your profile details</p>
@@ -23,7 +22,7 @@
 					</div>
 
 					<%= render "information" %>
-					<p ng-repeat="membership in user.memberships" class="organisations">{{membership.organisationRole}} of {{membership.organisation}}</p>
+					<!-- <p class="organisations">Co-Founder of <a href="#">Notes</a></p> -->
 					<span><button id="follow"></button>
 					<button id="message" ng-show="user.messageable"></button></span>
 				</div>
@@ -76,11 +75,5 @@
 
 <!-- ---------------PORTFOLIO----------- -->
 
-	<div class="portfolio" id="work-section" ng-keydown="togglePortfolio($event)" tabindex="0">
 
-		<div ng-include="url"></div>
-
-
-	</div>
 </div>
-
