--- a/app/views/organisations/show.html.erb
+++ b/app/views/organisations/show.html.erb
@@ -29,49 +29,23 @@
 			</div>
 
 			<div class="profile-options summary-column">
-
 				<div class="options-wrapper">
-					<div class="option" id="portfolio" ng-mouseenter="profile.selection = workPreview"><a href="#"><<p>Work<p></a></div>
-					<div class="option" id="social" ng-mouseenter="profile.selection = pickPreview"><p>Picks</p></div>
-					<div class="option" id="bio" ng-mouseenter="profile.selection = storyPreview"><p>Story</p></div>
-				</div>
-			</div>
-
-			<div class="profile-preview summary-column">
-
-				<div class="info-wrapper preview-wrapper">
-
-					<div class="work-preview">
-						<div class="work-preview-header">
-							<h3 id="selections" ng-show="profile.selection == workPreview">Selections of Laurie's Work</h3>
-							<h3 id="selections" ng-show="profile.selection == pickPreview">What Laurie Likes</h3>
-							<h3 id="selections" ng-show="profile.selection == storyPreview">Laurie's Stories</h3>
-						</div>
-
-						<div class="work-wrapper" ng-repeat="work in profile.selection">
-							<div class="work">
-								<div class="work-preview-info" ng-class="{ 'story': profile.selection == storyPreview }">
-									<div id="info">
-										<h1 class="preview-title">{{work.title}}</h1>
-										<p class="short-description">{{work.description}}</p>
-										<div class="additional-info">
-											<p class="recommendation-number" ng-class="{ 'story': profile.selection == storyPreview }">{{work.recommendations}}</p>
-											<p ng-class="{ 'cool-information' : work.commissionedOrFeatured, 'anthology' : work.anthology, 'single-author' : work.singleAuthor}">{{work.additionalInformation}}</p>
-										</div>
-								</div>
-							</div>
-
-							<div class="preview-pic pic-wrapper" ng-show="profile.selection != storyPreview">
-								<img id="profile-pic" ng-src="{{work.image}}">
-							</div>
-						</div>	
-						<div class="hr-wrapper"><hr id="after-work" ng-show="!$last"></div>
-
+					<div class="option" id="opportunities" ng-mouseenter="profile.selection = workPreview"><a class="opportunities" href="#">Opportunities</a>
 					</div>
 				</div>
+			</div>	
+
+			<div class="profile-preview">
+				<%= link_to 'Create Opportunity', new_organisation_opportunity_path(@organisation) %>
+				<div ng-repeat="opp in organisation.opportunities">
+					{{opp.title}}
+					{{opp.description}}
+					Accepting {{opp.requirements}}
+					<img ngsrc="{{opp.image}}">
+				</div>
+
 			</div>
-		</div>	
-	</div>
+
 
 <!-- ---------------PORTFOLIO----------- -->
 
