Organisations can publish opportunities - but deadlines feature is not implemented

--- a/app/views/organisations/show.html.erb
+++ b/app/views/organisations/show.html.erb
@@ -41,7 +41,7 @@
 					{{opp.title}}
 					{{opp.description}}
 					Accepting {{opp.requirements}}
-					<img ngsrc="{{opp.image}}">
+					<img class="opportunity-image" ng-src="{{opp.image}}">
 				</div>
 
 			</div>
