--- a/app/views/opportunities/new.html.erb
+++ b/app/views/opportunities/new.html.erb
@@ -1,6 +1,6 @@
 <div ng-controller="OpportunityNewCtrl">
 
-<%= form_for @opportunity, html: {multipart: true} do |f| %>
+<%= form_for @opportunity, url: organisation_opportunities_path, html: {multipart: true} do |f| %>
 
 	<%= f.label :title %>
 	<%= f.text_field :title %>
@@ -13,10 +13,11 @@
 
 	<img ng-src="{{imageSrc}}" />
 
-	<%= f.select(:opportunity, :requirements, [["Image", 1], ["Text", 2], ["Both Image and Text", 3]]) 
+	<%= f.label :requirements %>
+	<%= f.select(:requirements, options_for_select: [["Image", "images"], ["Text", "text"], ["Both Image and Text", "both images and text"]]) %>
 
 
-	<%= f.submit 'Submit' %>
+	<%= f.submit 'Publish' %>
 
 <% end %>
 
