--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -51,8 +51,9 @@
 
 		<div class="upload-options" ng-show = "upload == collection.title">
 			<a href="/users/{{user.id}}/collections/{{collection.id}}/works/new?upload_type=art">Add Art</a>
-					<a href="/users/{{user.id}}/collections/{{collection.id}}/works/new?upload_type=writing">Add Writing</a>
+					<a href="/users/{{user.id}}/collections/{{collection.id}}/works/new?upload_type=writing" ng-click="addEditor()">Add Writing</a>
 		</div>
+
 <% end %>
 
 	</div>
