User can submit to organisation opportunities. Remaining: showing submissions status and organisations viewing received submissions

--- a/app/views/organisations/show.html.erb
+++ b/app/views/organisations/show.html.erb
@@ -41,7 +41,8 @@
 					{{opp.title}}
 					{{opp.description}}
 					Accepting {{opp.requirements}}
-					<img class="opportunity-image" ng-src="{{opp.image}}">
+					<img ng-show="{{opp.image}}" class="opportunity-image" ng-src="{{opp.image}}">
+					<a href="/organisations/{{organisation.id}}/opportunities/{{opp.id}}/submission/new">Submit To Opportunity</a>
 				</div>
 
 			</div>
