User can pick work selections

--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -22,7 +22,7 @@
 
 		<h1 class="collection-title"
 		ng-hide="editable">
-			{{collection.title}}
+			<a href="/users/{{user.id}}/collections/{{collection.id}}">{{collection.title}}</a>
 		</h1>		
 
 
