--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -131,10 +131,11 @@ div.summary {
 }
 
 .option {
-	border-radius: 50%;
-	width: 100%;
-	height: 0;
-	padding-bottom: 100%;
+	border-radius: 100%;
+	width: 90px;
+	height: 90px;
+	padding-bottom: 5px;
+	padding-top: -2px;
 	border: solid;
 	border-width: thin;
 	border-color: rgba(0,0,0,0.2);
