--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -3,7 +3,7 @@
 
 
 
-<div ng-repeat="work in collection.works">
+<div ng-repeat="work in collection.works" class="{{work.title}}		">
 
 	{{work.title}}
 	<img ng-src="{{work.image}}" ng-class="{'uploaded-image': work.format == 'image', 'text-thumbnail': work.format == 'text' }">
@@ -14,6 +14,10 @@
 	<div ng-show="work.format == 'text'">
 		<div ng-bind-html="work.text"></div>
 	</div>
+
+	<input type="checkbox" name="selected" value="{{work.id}}" ng-click="sendSelection(work.id)" ng-model="selected" ng-true-value="{{work.id}}">Show on profile cover?
+
+	{{selected}}
 
 </div>
 
