--- a/app/assets/stylesheets/works.css.scss
+++ b/app/assets/stylesheets/works.css.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the works controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+/*.text-editor input {
+	background-color: salmon;
+}*/
+
+p.text-editor {
+	margin-left: 200px;
+	background-color: salmon;
+	color: black;
+}
+
+data-placeholder {
+	color: black;
+}
