--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,10 +13,14 @@
  *= require xeditable
  *= require medium-editor
  *= require medium-flat.min
+ *= require bootstrap
  *= require_tree .
  *= require_self
  */
 
+@import "bootstrap-sprockets";
+@import "bootstrap";
+@import "font-awesome";
 
 .log-out {
 	position: fixed;
