--- a/app/views/works/_writing.html.erb
+++ b/app/views/works/_writing.html.erb
@@ -1,7 +1,7 @@
 <div id="container" style="max-width: 70%;" ng-repeat="editor in editors">
 	
  	<form name="demo">
-		<div ng-model="editors.body" id="editor.id" ng-change="saveEditor(editor.id,$event)" medium-editor></div>
+		<div medium-editor></div>
 	</form>
 
 </div>
