--- a/app/views/submissions/new.html.erb
+++ b/app/views/submissions/new.html.erb
@@ -10,6 +10,6 @@
 	<%= f.label :message %>
 	<%= f.text_area :message %>
 
-	<%= f.submit 'Submit' %>
+	<%= f.submit 'Submit', class: 'btn btn-primary' %>
 
 <% end %>
