--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
 
 
 
-		<div class="summary" id="summary-section">
+		<div class="summary row" id="summary-section">
 
 			<div class="profile-info summary-column">
 				<div class="info-wrapper">
